# vmaf-rs2

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: copilot-instructions.md  lsp.json
crates/vmaf/: Cargo.toml
crates/vmaf-adm/: Cargo.toml
crates/vmaf-adm/src/: decouple.rs  dwt.rs  extractor.rs  lib.rs  math.rs  noise_floor.rs  score.rs  tables.rs
crates/vmaf-adm/src/simd/: aarch64.rs  mod.rs  x86.rs
crates/vmaf-cli/: Cargo.toml
crates/vmaf-cli/src/: main.rs
crates/vmaf-cpu/: Cargo.toml
crates/vmaf-cpu/src/: alignment.rs  backend.rs  cast.rs  lib.rs  math.rs  validation.rs
crates/vmaf-cpu/src/probe/: aarch64.rs  mod.rs  x86.rs
crates/vmaf-model/: Cargo.toml
crates/vmaf-model/src/: error.rs  json.rs  lib.rs  libsvm.rs  model.rs  normalize.rs  pool.rs  predict.rs  svm.rs
crates/vmaf-motion/: Cargo.toml
crates/vmaf-motion/src/: blur.rs  extractor.rs  lib.rs  sad.rs  simd.rs
crates/vmaf-vif/: Cargo.toml  build.rs
crates/vmaf-vif/src/: extractor.rs  filter.rs  lib.rs  math.rs  stat.rs  tables.rs
crates/vmaf-vif/src/filter/: aarch64.rs  x86.rs
crates/vmaf-vif/src/stat/: aarch64.rs  x86.rs
crates/vmaf/src/: lib.rs
docs/: VMAF_DESIGN_SPEC.md
