[workspace]
resolver = "3"
members = [
    "crates/vmaf",
    "crates/vmaf-vif",
    "crates/vmaf-adm",
    "crates/vmaf-motion",
    "crates/vmaf-model",
    "crates/vmaf-cli",
]

[workspace.dependencies]
# Math
libm = "0.2"

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallelism
rayon = "1.11"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Video input
y4m = "0.8"

# Intra-workspace crates
vmaf = { path = "crates/vmaf" }
vmaf-vif = { path = "crates/vmaf-vif" }
vmaf-adm = { path = "crates/vmaf-adm" }
vmaf-motion = { path = "crates/vmaf-motion" }
vmaf-model = { path = "crates/vmaf-model" }
