[workspace]
resolver = "3"
members = [
    "crates/vmaf",
    "crates/vmaf-vif",
    "crates/vmaf-adm",
    "crates/vmaf-motion",
    "crates/vmaf-model",
    "crates/vmaf-cli",
    "crates/vmaf-cpu",
]

[workspace.dependencies]
# Math
libm = "0.2"
# CPU / SIMD foundation
aligned-vec = "0.6.4"
bytemuck = "1.24"
cpufeatures = "0.2"
# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
# Parallelism
rayon = "1.11"
# CLI
clap = { version = "4.6", features = ["derive"] }
indicatif = "0.17"
# Video input
y4m = "0.8"
# Intra-workspace crates
vmaf = { path = "crates/vmaf" }
vmaf-vif = { path = "crates/vmaf-vif" }
vmaf-adm = { path = "crates/vmaf-adm" }
vmaf-motion = { path = "crates/vmaf-motion" }
vmaf-model = { path = "crates/vmaf-model" }
vmaf-cpu = { path = "crates/vmaf-cpu" }

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = 1
lto = false
codegen-units = 16
