[package]
name = "vmaf-model"
version = "0.1.0"
edition = "2021"

# §3.3 JSON/LIBSVM parser + §5 SVM inference + score transform + pooling
[dependencies]
libm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
vmaf-cpu = { workspace = true }
